apps/talos_cluster/monitoring-stack/alertmanager-ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: alertmanager
    namespace: monitoring
spec:
    parentRefs:
        - name: envoy-gateway
          namespace: envoy-gateway
    hostnames:
        - alertmanager.midnightthoughts.space
    rules:
        - backendRefs:
            - name: prometheus-stack-kube-prom-alertmanager
              port: 9093
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1esjyg2qfy49awv0ptkzvpk425adczjr38m37w2mmcahzc4p8n54sll2nzh
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA3a3NnNnpaVG1zM0pDVlpM
[...]
            7ZPSm1ASI7cQei0MY/Fm+RwTn0S91oC+DlLsddJT6Sb+WUEUMjbGjw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2026-03-13T10:55:38Z"
    mac: ENC[AES256_GCM,data:A71mRe+40KByfAsB/3xrtjotVA0HIn/Y3ouNrI5idPCYNqyXHPENP401iBpOcvS/ITFWbtY4FyNTS97k3ewjgflfAY+ltpYdxDWvWeJfaYmyJ+05H0SmZUfcf+tEgvsBtOvV2vEMwIgrelroNZI64nQVBf+YV4/UGT/Kx1UG8SY=,iv:zYq4ohrbhROFJh4t7QqwtMmO7Swegt3NOoN/wkUyKns=,tag:K+uVmesjvTzjlQVIWMfw2A==,type:str]
    pgp: []
    encrypted_regex: ^(apiKey|appUserPassword|otelUserPassword|harborAdminPassword|totpVaultKey|kimaiAppSecret|kimaiAdminPassword|GITHUB_CLIENT_ID|GITHUB_CLIENT_SECRET|GITHUB_PRIVATE_KEY|woosh|root_password|rspamd_password|pgdb_password|matrix_access_token|pgdb_remote_url|hmac_secret_key|adminPassword|adminEmail|jenkinsAdminEmail|securityRealm|gerrit.config|routing_key|DATABASE_URL|SMTP_PASSWORD|SECRET_KEY_BASE|admin_password|extraCommands|key|clickhouseDatabaseURL|databaseURL|client_id|client_s [...]
    version: 3.9.1
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
    name: oidc-alertmanager
    namespace: monitoring
spec:
    targetRefs:
        - group: gateway.networking.k8s.io
          kind: HTTPRoute
          name: alertmanager
    oidc:
        provider:
            issuer: https://auth.midnightthoughts.space/application/o/grafana/
            authorizationEndpoint: https://auth.midnightthoughts.space/application/o/authorize/
            tokenEndpoint: https://auth.midnightthoughts.space/application/o/token/
        clientID: Hi9j2holcUd89OwdmJgoaGppow6RrECQJiTq4Isk
        clientSecret:
            name: ENC[AES256_GCM,data:1LEXwIOr3sO1drLIr+8ITenbvG1++kTt,iv:46F1LYXgwhIdAPBKc35uEUDfpKyIBDKZPJ70IjVkXsU=,tag:jMTS6vfZ8gELnpGcgzbG/w==,type:str]
        refreshToken: true
        cookieDomain: midnightthoughts.space
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1esjyg2qfy49awv0ptkzvpk425adczjr38m37w2mmcahzc4p8n54sll2nzh
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA3a3NnNnpaVG1zM0pDVlpM
[...]
            7ZPSm1ASI7cQei0MY/Fm+RwTn0S91oC+DlLsddJT6Sb+WUEUMjbGjw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2026-03-13T10:55:38Z"
    mac: ENC[AES256_GCM,data:A71mRe+40KByfAsB/3xrtjotVA0HIn/Y3ouNrI5idPCYNqyXHPENP401iBpOcvS/ITFWbtY4FyNTS97k3ewjgflfAY+ltpYdxDWvWeJfaYmyJ+05H0SmZUfcf+tEgvsBtOvV2vEMwIgrelroNZI64nQVBf+YV4/UGT/Kx1UG8SY=,iv:zYq4ohrbhROFJh4t7QqwtMmO7Swegt3NOoN/wkUyKns=,tag:K+uVmesjvTzjlQVIWMfw2A==,type:str]
    pgp: []
    encrypted_regex: ^(apiKey|appUserPassword|otelUserPassword|harborAdminPassword|totpVaultKey|kimaiAppSecret|kimaiAdminPassword|GITHUB_CLIENT_ID|GITHUB_CLIENT_SECRET|GITHUB_PRIVATE_KEY|woosh|root_password|rspamd_password|pgdb_password|matrix_access_token|pgdb_remote_url|hmac_secret_key|adminPassword|adminEmail|jenkinsAdminEmail|securityRealm|gerrit.config|routing_key|DATABASE_URL|SMTP_PASSWORD|SECRET_KEY_BASE|admin_password|extraCommands|key|clickhouseDatabaseURL|databaseURL|client_id|client_s [...]
    version: 3.9.1
